adding footer layout and using nested templates

--- a/photogallery_app/views/contact.gohtml
+++ b/photogallery_app/views/contact.gohtml
@@ -3,3 +3,5 @@
     To get in touch please send an email to 
     <a href="mailto:shivam99aa@gmail.com">shivam99aa@gmail.com</a>
 </p>
+
+{{template "footer"}}
