--- a/photogallery_app/views/contact.gohtml
+++ b/photogallery_app/views/contact.gohtml
@@ -1,7 +1,9 @@
-<h1>Get in touch</h1>
-<p>
-    To get in touch please send an email to 
-    <a href="mailto:shivam99aa@gmail.com">shivam99aa@gmail.com</a>
-</p>
+{{define "yield"}}
+    <h1>Get in touch</h1>
+    <p>
+        To get in touch please send an email to 
+        <a href="mailto:shivam99aa@gmail.com">shivam99aa@gmail.com</a>
+    </p>
 
-{{template "footer"}}
+    {{template "footer"}}
+{{end}}
