--- a/photogallery_app/views/layouts/navbar.gohtml
+++ b/photogallery_app/views/layouts/navbar.gohtml
@@ -10,12 +10,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LensLocked.com</a>
+            <a class="navbar-brand" href="/">LensLocked.com</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/contact">Contact</a></li>
+                <li><a href="/faq">FAQ</a></li>
             </ul>
         </div>
     </div>
