--- a/photogallery_app/views/layouts/navbar.gohtml
+++ b/photogallery_app/views/layouts/navbar.gohtml
@@ -16,8 +16,10 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/faq">FAQ</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/signup">Sign Up</a></li>
             </ul>
         </div>
     </div>
